# CensorChip

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: downloader.rs  main.rs  ort_downloader.rs  overlay.rs
src/capture/: frame.rs  mod.rs
src/censor/: mod.rs
src/config/: mod.rs
src/inference/: label_config.rs  mod.rs  model_registry.rs  onnx.rs
src/pipeline/: mod.rs  tracker.rs
src/ui/: mod.rs
