[package]
name = "censorchip"
version = "0.1.0"
edition = "2021"
authors = ["GammaAdmin"]
license = "GPL-3.0-or-later"
description = "Real-time AI-powered screen content censorship"
repository = "https://github.com/GammaAdmin/CensorChip"
readme = "README.md"

[dependencies]
# UI framework
eframe = { version = "0.29", features = ["default", "wgpu"] }
egui = "0.29"

# Image processing
image = { version = "0.25", features = ["png", "jpeg"] }

# AI inference
ort = { version = "=2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Threading / channels
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Platform screen capture
screenshots = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Archive extraction
zip = "0.6"

# Misc
num_cpus = "1"
once_cell = "1"

# HTTP download (models)
ureq = { version = "3", default-features = false, features = ["rustls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
